[package]
name = "pb-std-rules"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "brotli", "gzip", "xz", "zstd"] }
bytes = "1"
futures = "0.3"
pb-rules-sdk = { path = "../pb/pb-rules-sdk" }
tar = "0.4"
tokio-util = { version = "0.7", features = ["io"], default-features = false }
tracing = "0.1"
